# EmoHunter

./: .dockerignore  .env  .env.example  .gitignore  APPLE_WATCH_INTEGRATION.md  BACKEND_FEATURES.md  DEPLOYMENT_GUIDE.md  Dockerfile  GCP_DEPLOYMENT_GUIDE.md  INCENTIVE_ENGINE_GUIDE.md  KITE_DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  TRUST_COMMIT_README.md  UI_Integration_Guide.md  UI_Session_Integration.md  camera_test_ui.html  cloudbuild.yaml  deploy.sh  main.py  netlify.toml  pyproject.toml  requirements.txt  simple_test_launcher.py  test_apple_watch_integration.py  test_client.py  test_mock_biometric_data.py  test_session_storage.py  test_text_conversation.py  test_trust_commit_integration.py  test_ui.html  websocket_test.html
app/: __init__.py  main.py
app/adapters/: __init__.py  kite_chain.py
app/api/: trust.py
app/core/: __init__.py  canonical.py  crypto.py
app/db/: models.py  session.py
backend/: README.md  docker-compose.yml
backend/common/: __init__.py  config.py
backend/common/schemas/: __init__.py  base.py  biometric.py  conversation.py  emotion.py  (+1 more)
contracts/: .env.example  .gitignore  README.md
contracts/reference/: contract_interface.py  test_local.py
contracts/script/: DeployAuraVault.s.sol  DeployIncentiveEngine.s.sol
contracts/src/: AuraVaultMVP.sol  EmoHunterIncentiveEngine.sol
contracts/test/: AuraVaultMVP.t.sol  EmoHunterIncentiveEngine.t.sol
tests/: __init__.py  conftest.py  test_trust_system.py
tools/: gen_keys.py
web/aura-vault-dapp/: DEPLOY.md  package-lock.json  package.json  tsconfig.json  vercel.json
(+196 files in other folders)
